refactoring clear filter button

--- a/app/views/citizens/index.html.erb
+++ b/app/views/citizens/index.html.erb
@@ -35,7 +35,7 @@
 
         <div class="filter-button-group">
             <%= form.submit "Filtrar", class: "button primary" %>
-            <button type="button" class="button secondary" onclick="clearQueryParamsAndReload()" id="reset-button">Limpar filtros</button>
+            <button type="button" class="button secondary" id="reset-button">Limpar filtros</button>
         </div>
     <% end %>
 </section>
