using turbo stream to render flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
   </head>
 
   <body>
+    <div id="flash_messages">
+      <%= render "shared/flash_messages", flash: flash %>
+    </div>
+
     <main class="container">
       <%= yield %>
     </main>
