fixing the tests

--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, messages| %>
-  <div class="flash <%= type %>" style="margin-bottom: 1rem; padding: 0.5rem;">
+  <div style="margin-bottom: 1rem; padding: 0.5rem;">
     <% if type == 'notice' %>
       <span class="icon">🔔</span>
     <% elsif type == 'alert' %>
