add button to redirect to citizen creation form

--- a/app/views/citizens/_form.html.erb
+++ b/app/views/citizens/_form.html.erb
@@ -28,8 +28,8 @@
     </div>
 
     <div class="field">
-      <%= form.label :phone, "Telefone" %>
-      <%= form.text_field :phone, placeholder: "Telefone" %>
+      <%= form.label :phone, "Telefone com DDI e DDD" %>
+      <%= form.text_field :phone, placeholder: "+55 (00) 0000-0000" %>
     </div>
 
     <div class="field">
