--- a/app/assets/stylesheets/citizens.css
+++ b/app/assets/stylesheets/citizens.css
@@ -5,18 +5,20 @@
 }
 
 .filter-flex-item {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
     flex-basis: calc(50% - 10px);
 }
 
 .filter-button-group {
     display: flex;
-    justify-content: space-between;
     gap: 20px;
 }
 
-.button {
-    width: calc(100% - 10px);
+.citizens-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.create-citizen-button {
+    width: 180px;
+    height: 62px;
 }
