formatting the code

--- a/app/views/citizens/index.html.erb
+++ b/app/views/citizens/index.html.erb
@@ -32,9 +32,11 @@
 
 <div class="citizens-header">
     <h1>Listagem de Munícipes</h1>
+    <%# erblint:disable-all %>
     <button class="button primary create-citizen-button" onclick="window.location='<%= new_citizen_path %>'">
         Criar Munícipe
     </button>
+    <%# erblint:enable-all %>
 </div>
 
 <table>
