adding active storage

--- a/app/views/citizens/_form.html.erb
+++ b/app/views/citizens/_form.html.erb
@@ -32,6 +32,11 @@
     </div>
 
     <div class="field">
+      <%= form.label :photo, "Photo" %>
+      <%= form.file_field :photo, placeholder: "Photo" %>
+    </div>
+
+    <div class="field">
       <%= form.label :status, "Status" %>
       <%= form.check_box :status %>
     </div>
