formatting phone number before save

--- a/app/views/citizens/_form.html.erb
+++ b/app/views/citizens/_form.html.erb
@@ -28,7 +28,7 @@
 
     <div class="field">
       <%= form.label :phone, "Telefone com DDI e DDD" %>
-      <%= form.text_field :phone, placeholder: "+55 (00) 0000-0000", required: true %>
+      <%= form.text_field :phone, placeholder: "+55 (00) 0 0000-0000", required: true %>
     </div>
 
     <div class="field">
